--- a/openday_scavenger/puzzles/imagereveal/notebooks/play.ipynb
+++ b/openday_scavenger/puzzles/imagereveal/notebooks/play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,72 +26,70 @@
       "Saved ../static/im1\n",
       "Saved ../static/im2\n",
       "Saved ../static/im3\n",
-      "Saved ../static/im4\n",
-      "Saved ../static/im5\n",
-      "Saved ../static/im6\n"
+      "Saved ../static/im4\n"
      ]
     }
    ],
    "source": [
     "IMAGE_DATA = {\n",
-    "    \"lobster\": [\n",
-    "        \"im1\",\n",
-    "        \"../static/105408-Lobster-100um-CaCuAs-scale.jpg\",\n",
-    "        \"Image (c) Daniel McDougall, University of Auckland, Licensed under CC BY-NC-ND 4.0\",\n",
-    "    ],\n",
-    "    \"ants1\": [\n",
-    "        \"im2\",\n",
-    "        \"../static/23902-Ants-CuZnK-scale.jpg\",\n",
-    "        \"Image (c) Australian Synchrotron, Licensed under CC BY-NC-ND 4.0\",\n",
-    "    ],\n",
     "    \"ants2\": [\n",
-    "        \"im3\",\n",
+    "        \"im1\",\n",
     "        \"../static/105366-Ants-ZnCaK.jpg\",\n",
     "        \"Image (c) Australian Synchrotron, Licensed under CC BY-NC-ND 4.0\",\n",
     "    ],\n",
-    "    \"flea\": [\n",
-    "        \"im4\",\n",
-    "        \"../static/105745-Flea-ZnCaCu.jpg\",\n",
-    "        \"Image (c) Australian Synchrotron, Licensed under CC BY-NC-ND 4.0\",\n",
-    "    ],\n",
     "    \"millipede\": [\n",
-    "        \"im5\",\n",
+    "        \"im2\",\n",
     "        \"../static/40308-Millipede-CuZnFe.jpg\",\n",
     "        \"Image (c) Australian Synchrotron, Licensed under CC BY-NC-ND 4.0\",\n",
     "    ],\n",
     "    \"mosquito\": [\n",
-    "        \"im6\",\n",
+    "        \"im3\",\n",
     "        \"../static/23920_Mosquito_2-CaBrK.jpg\",\n",
     "        \"Image (c) Australian Synchrotron, Licensed under CC BY-NC-ND 4.0\",\n",
     "    ],\n",
+    "    \"lobster\": [\n",
+    "        \"im4\",\n",
+    "        \"../static/105408-Lobster-100um-CaCuAs-scale.jpg\",\n",
+    "        \"Image (c) Daniel McDougall, University of Auckland, Licensed under CC BY-NC-ND 4.0\",\n",
+    "    ],\n",
+    "    # \"ants1\": [\n",
+    "    #     \"im5\",\n",
+    "    #     \"../static/23902-Ants-CuZnK-scale.jpg\",\n",
+    "    #     \"Image (c) Australian Synchrotron, Licensed under CC BY-NC-ND 4.0\",\n",
+    "    # ],\n",
+    "    # \"flea\": [\n",
+    "    #     \"im6\",\n",
+    "    #     \"../static/105745-Flea-ZnCaCu.jpg\",\n",
+    "    #     \"Image (c) Australian Synchrotron, Licensed under CC BY-NC-ND 4.0\",\n",
+    "    # ],\n",
     "}\n",
     "\n",
-    "for key, (im_name, path, text) in IMAGE_DATA.items():\n",
-    "    with Image.open(path) as im:\n",
-    "        maxsize = (1024, 1024)\n",
-    "        im.thumbnail(maxsize, Image.Resampling.LANCZOS)\n",
-    "        # Add copyright text\n",
-    "        draw = ImageDraw.Draw(im)\n",
-    "        im_width, im_height = im.size\n",
-    "        text_height = im_height / 50\n",
-    "        font = ImageFont.truetype(r\"/usr/share/fonts/truetype/dejavu/DejaVuSans.ttf\", text_height)\n",
-    "        draw.text(\n",
-    "            (text_height / 4, im_height - text_height * 5 / 4), text, (255, 255, 255), font=font\n",
-    "        )\n",
-    "        parent = Path(path).parent.joinpath(im_name)\n",
-    "        im.save(f\"{parent}.jpg\")\n",
-    "        np.save(f\"{parent}.npy\", np.array(im))\n",
+    "# for key, (im_name, path, text) in IMAGE_DATA.items():\n",
+    "#     with Image.open(path) as im:\n",
+    "#         maxsize = (1024, 1024)\n",
+    "#         im.thumbnail(maxsize, Image.Resampling.LANCZOS)\n",
+    "#         # Add copyright text\n",
+    "#         draw = ImageDraw.Draw(im)\n",
+    "#         im_width, im_height = im.size\n",
+    "#         text_height = im_height / 50\n",
+    "#         font = ImageFont.truetype(r\"/usr/share/fonts/truetype/dejavu/DejaVuSans.ttf\", text_height)\n",
+    "#         draw.text(\n",
+    "#             (text_height / 4, im_height - text_height * 5 / 4), text, (255, 255, 255), font=font\n",
+    "#         )\n",
+    "#         parent = Path(path).parent.joinpath(im_name)\n",
+    "#         im.save(f\"{parent}.jpg\")\n",
+    "#         np.save(f\"{parent}.npy\", np.array(im))\n",
     "\n",
-    "        # make sure the npy file is readable\n",
-    "        im_npy = Image.fromarray(np.load(f\"{parent}.npy\"))\n",
-    "        im_npy.save(f\"{parent}_npy.jpg\")\n",
+    "#         # make sure the npy file is readable\n",
+    "#         im_npy = Image.fromarray(np.load(f\"{parent}.npy\"))\n",
+    "#         im_npy.save(f\"{parent}_npy.jpg\")\n",
     "\n",
-    "        print(f\"Saved {parent}\")"
+    "#         print(f\"Saved {parent}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,10 +106,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "IM = \"../static/im1.jpg\"\n",
     "\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,19 +155,7 @@
       "Saved ../static/im4_5\n",
       "Saved ../static/im4_7\n",
       "Saved ../static/im4_9\n",
-      "Saved ../static/im4_10\n",
-      "Saved ../static/im5_1\n",
-      "Saved ../static/im5_3\n",
-      "Saved ../static/im5_5\n",
-      "Saved ../static/im5_7\n",
-      "Saved ../static/im5_9\n",
-      "Saved ../static/im5_10\n",
-      "Saved ../static/im6_1\n",
-      "Saved ../static/im6_3\n",
-      "Saved ../static/im6_5\n",
-      "Saved ../static/im6_7\n",
-      "Saved ../static/im6_9\n",
-      "Saved ../static/im6_10\n"
+      "Saved ../static/im4_10\n"
      ]
     }
    ],
@@ -194,7 +182,7 @@
     "            add_copyright_text(im_masked)\n",
     "\n",
     "            im_masked.save(f\"{parent}_{p}.jpg\")\n",
-    "            np.save(f\"{parent}_{p}.npy\", np.array(im_masked))\n",
+    "            # np.save(f\"{parent}_{p}.npy\", np.array(im_masked))\n",
     "\n",
     "            print(f\"Saved {parent}_{p}\")"
    ]
